--- a/ExternalAdapterProject/package.json
+++ b/ExternalAdapterProject/package.json
@@ -9,7 +9,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@chainlink/external-adapter": "^0.2.3"
+    "@chainlink/external-adapter": "^0.2.3",
+    "tiktok-scraper": "^1.3.4"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
