--- a/angular-dapp/package.json
+++ b/angular-dapp/package.json
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "@chainlink/contracts": "^0.0.9",
     "@angular/animations": "8.2.0",
     "@angular/cdk": "^8.2.0",
     "@angular/common": "8.2.0",
@@ -25,10 +24,12 @@
     "@angular/platform-browser-dynamic": "8.2.0",
     "@angular/platform-server": "8.2.0",
     "@angular/router": "8.2.0",
+    "@chainlink/contracts": "^0.0.9",
     "@truffle/contract": "^4.0.33",
     "@truffle/hdwallet-provider": "^1.1.1",
     "core-js": "2.5.7",
     "ethers": "^4.0.37",
+    "material-design-icons": "^3.0.1",
     "node-sass": "4.12.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
