--- a/angular-dapp/package.json
+++ b/angular-dapp/package.json
@@ -27,6 +27,7 @@
     "@chainlink/contracts": "^0.0.9",
     "@truffle/contract": "^4.0.33",
     "@truffle/hdwallet-provider": "^1.1.1",
+    "angular-cli-ghpages": "^0.6.2",
     "core-js": "2.5.7",
     "ethers": "^4.0.37",
     "material-design-icons": "^3.0.1",
