--- a/angular-dapp/package.json
+++ b/angular-dapp/package.json
@@ -31,6 +31,7 @@
     "core-js": "2.5.7",
     "ethers": "^4.0.37",
     "material-design-icons": "^3.0.1",
+    "ngx-clipboard": "^14.0.1",
     "node-sass": "4.12.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
